update footer to include Mozilla branding (fix #251, #197) (#278)
* update footer to include Mozilla branding (fix #251)

* update ftl strings

* format update

* update Firefox logo link area to avoid overlapping evterprise link

* update styles for rtl

* address review feedback

* format update

--- a/media/css/protocol/components/_footer.scss
+++ b/media/css/protocol/components/_footer.scss
@@ -2,6 +2,8 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at https://mozilla.org/MPL/2.0/.
 
+@use 'sass:math';
+
 $image-path: '/media/protocol/img';
 
 @use '../../m24/vars/color' as m24;
@@ -50,9 +52,14 @@ $image-path: '/media/protocol/img';
     display: none;
 }
 
-@media screen and (min-width: #{$screen-sm}) and (max-width: #{$screen-lg - 1px}) {
+.mzp-c-footer-primary {
+    @include footer-line;
+}
+
+@media screen and (max-width: #{$screen-lg - 1px}) {
     .mzp-c-footer-sections {
         // massive Protocol override
+        border-bottom: transparent;
         column-gap: $spacing-lg;
         display: grid;
         grid-template-areas:
@@ -72,6 +79,10 @@ $image-path: '/media/protocol/img';
 
             &::after {
                 display: none;
+            }
+
+            html[dir='rtl'] &:nth-child(even) {
+                padding: 0;
             }
         }
 
@@ -134,6 +145,16 @@ $image-path: '/media/protocol/img';
     }
 }
 
+@media screen and (min-width: #{$screen-lg}) {
+    .mzp-c-footer-primary {
+        position: relative;
+    }
+
+    .mzp-c-footer-sections {
+        border-color: transparent;
+        padding-bottom: 0;
+    }
+}
 
 /* ----------------------------------------------------------------------------- */
 // Secondary
@@ -179,12 +200,39 @@ $image-path: '/media/protocol/img';
 
 .c-footer-logo {
     @extend .mzp-c-footer-primary-logo; /* stylelint-disable-line scss/at-extend-no-missing-placeholder */
+    text-align: center;
+
+    @media screen and (min-width: #{$screen-lg}) {
+        bottom: 0;
+        position: absolute;
+        text-align: end;
+        @include bidi(((right, 0, left, auto),));
+
+        $gutter: math.div($layout-md, 4);
+        width: calc(((100% - 2 * var(--h-grid-md)) - $gutter) / 4 );
+    }
 
     a {
         background-image: url('/media/img/logos/firefox/logo-word-hor-white.svg');
         background-size: contain;
-        height: 40px;
-        width: 120px;
+        display: block;
+        width: 200px;
+        height: 68px;
+        margin: 0 auto;
+
+        @media screen and (min-width: #{$screen-lg}) {
+            text-align: start;
+            margin: 0;
+        }
+    }
+}
+
+.c-footer-branding {
+    margin-bottom: $spacing-xl;
+
+    h2 {
+        @include font-size(24px);
+        padding-top: 0;
     }
 }
 
